2003-04-23  Martin Baulig  <martin@ximian.com>

	* debug-jit.c (mono_debug_add_method): Renamed this to
	mono_debug_jit_add_method(); create the JIT-specific data
	structure and pass it to mono_debug_add_method().

	* debug.[ch]: Removed.  The code is now in
	../metadata/mono-debug.[ch] and mono-debug-debugger.[ch].

	* debug-stabs.c, debug-dwarf2.c: Removed; nobody used this for the
	last six months.

2003-04-21  Martin Baulig  <martin@ximian.com>

	* debug.c (mono_debug_open): Splitted into mono_debug_init() and
	mono_debug_init_2().
	(mono_debug_open_image): Don't open referenced assemblies; this is
	done automatically by the code in assembly.c.

	* mono.c (main_thread_handler): Call mono_debug_init() before
	opening the assembly because we need to install the assembly load
	hook before doing so.

2003-04-17  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* jit.c:
	(mono_jit_cleanup): moved mono_runtime_cleanup call after the call to
	mono_domain_finalize.

2003-04-05  Miguel de Icaza  <miguel@ximian.com>

	* jit.c (check_inlining): honor the NOINLING atttribute.

2003-03-31  Martin Baulig  <martin@ximian.com>

	* debug.h (MonoDebuggerEvent): Removed
	MONO_DEBUGGER_EVENT_THREAD_CREATED.

	* jit.c (mono_thread_start_cb): Don't send the
	MONO_DEBUGGER_EVENT_THREAD_CREATED event.

2003-03-13  Martin Baulig  <martin@ximian.com>

	* debug.c (_mono_debug_address_from_il_offset): Moved to
	../metadata/debug-mono-symfile.c

2003-03-07  Martin Baulig  <martin@ximian.com>

	* debug-jit.c: #include <config.h>.

2003-03-05  Martin Baulig  <martin@ximian.com>

	* debug-jit.c, debug-jit.h: New files.  Moved all JIT-specific
	stuff here.

	* debug.c (mono_debug_add_method): Moved to debug-jit.c.
	(mono_debug_handle, mono_debug_initialized): Made them global.
	(replace_suffix): Removed, this isn't used anymore.
	(record_line_number): Moved to debug-jit.c.
	(debug_generate_method_lines): Moved to debug-jit.c
	(generate_line_number): Renamed to