@@ -1,5 +1,8 @@
 2003-04-23  Martin Baulig  <martin@ximian.com>
 
+	* mono.c: The `--debug' command line argument doesn't take any
+	arguments anymore, removed the `--debug-args' argument.
+
 	* debug-jit.c (mono_debug_add_method): Renamed this to
 	mono_debug_jit_add_method(); create the JIT-specific data
 	structure and pass it to mono_debug_add_method().
